# aoc-25-rs

./: Cargo.toml
src/day01/: part1.rs  part2.rs
src/day02/: part1.rs  part2.rs
src/day03/: day03-2  part1.rs  part2.rs
src/day04/: part1.rs  part2.rs
src/day05/: day05-1  part1.rs  part2.rs
