[package]
name = "aoc-25-rs"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bin]]
name = "day01-1"
path = "src/day01/part1.rs"

[[bin]]
name = "day01-2"
path = "src/day01/part2.rs"

[[bin]]
name = "day02-1"
path = "src/day02/part1.rs"

[[bin]]
name = "day02-2"
path = "src/day02/part2.rs"

[[bin]]
name = "day03-1"
path = "src/day03/part1.rs"

[[bin]]
name = "day03-2"
path = "src/day03/part2.rs"

[[bin]]
name = "day04-1"
path = "src/day04/part1.rs"

[[bin]]
name = "day04-2"
path = "src/day04/part2.rs"